inserts link to google font icons

--- a/index.html
+++ b/index.html
@@ -3,21 +3,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Font Icons -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <!-- Apps Icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- Account Circle Icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="styles.css">
     <title>Google Clone Page by deBee</title>
 </head>
 <body>
-    <div class="container">
+    <div class="header">
         <div class="nav-left">
-            <span>About</span>
-            <span>Share</span>
+            <a href="#">About</a>
+            <a href="#">Store</a>
         </div> <!-- nav-left-->
         <div class="nav-right">
-            <span>Gmail</span>
-            <span>Images</span>
+            <a href="#">Gmail</a>
+            <a href="#">Images</a>
+            <span class="material-symbols-outlined">apps</span>
+            <span class="material-symbols-outlined">account_circle</span>
             <span><img src="" alt=""></span>
             <span><img src="" alt=""></span>
         </div> <!-- nav-right-->
+    </div> <!-- header-->
+    <div class="container">
         <div class="center">
+            <img src="https://www.google.com/imghp" alt="">
             <h1>Google</h1>
         </div> <!--center-->
         <form action="">
@@ -25,6 +38,6 @@
             <button>Google Search</button>
             <button>I'm Feeling Lucky</button>
         </form>
-    </div> <!-- container-->
+    </div> <!--container-->
 </body>
 </html>
