adds box-shadow and other things

--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
 <body>
     <!-- Header Starts -->
     <div class="header">
-        <div class="header-left">
-            <a href="#">About</a>
-            <a href="#">Store</a>
-        </div> <!-- header-left-->
-        <div class="header-right">
+        <div class="header-nav">
             <a href="#">Gmail</a>
             <a href="#">Images</a>
             <img src="images/app.svg" class="app-img" alt="">
             <img src="images/account-circle.svg" class="account-circle-img" alt="">
-        </div> <!-- header-right-->
+        </div> <!-- header-nav-->
     </div> <!-- header-->
     <!-- Header Ends -->
 
@@ -39,9 +35,33 @@
                 <button>Google Search</button>
                 <button>I'm Feeling Lucky</button>
             </div> <!-- search-buttons-->
+            <div class="lang">
+                <span> Google offered in: </span>
+                <a href="#">Hausa</a>
+                <a href="#">Igbo</a>
+                <a href="#">Ede Yoruba</a>
+                <a href="#">Nigerian Pidgin</a>
+            </div> <!--lang-->
         </div> <!--search-->
         <!-- Search Ends -->
     </div> <!--main-body-->
     <!-- Main Body Ends -->
+
+    <!-- Footer Starts -->
+    <div class="footer">
+        <span>Nigeria</span>
+        <hr>
+        <span><img src="" alt=""> Carbon neutral since 2007</span>
+        <div class="footer-bottom">
+            <span>About</span>
+            <span>Advertising</span>
+            <span>Business</span>
+            <span>How Search works</span>
+            <span>Privacy</span>
+            <span>Terms</span>
+            <span>Settings</span>
+        </div> <!--footer-bottom-->
+    </div> <!--footer-->
+    <!-- Footer Ends -->
 </body>
 </html>
