adds some styling to the footer

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
     <!-- Footer Starts -->
     <div class="footer">
-        <span>Nigeria</span>
-        <hr>
-        <span><img src="" alt=""> Carbon neutral since 2007</span>
+        <span class="Nigeria">Nigeria</span>
+        <div class="line"></div>
         <div class="footer-bottom">
+            <span class="carbon"><img src="" alt=""> Carbon neutral since 2007</span>
             <span>About</span>
             <span>Advertising</span>
             <span>Business</span>
