finishes the styling for the footer, and the page

--- a/index.html
+++ b/index.html
@@ -48,20 +48,24 @@
     <!-- Main Body Ends -->
 
     <!-- Footer Starts -->
-    <div class="footer">
+    <div class="footer-top">
         <span class="Nigeria">Nigeria</span>
         <div class="line"></div>
+    </div> <!--footer-top-->
         <div class="footer-bottom">
-            <span class="carbon"><img src="" alt=""> Carbon neutral since 2007</span>
-            <span>About</span>
-            <span>Advertising</span>
-            <span>Business</span>
-            <span>How Search works</span>
-            <span>Privacy</span>
-            <span>Terms</span>
-            <span>Settings</span>
+            <div class="footer-left">
+                <span>About</span>
+                <span>Advertising</span>
+                <span>Business</span>
+                <span>How Search works</span>
+            </div>
+            <div class="footer-center"><img src="" alt=""> Carbon neutral since 2007</div>
+            <div class="footer-right">
+                <span>Privacy</span>
+                <span>Terms</span>
+                <span>Settings</span>
+            </div> 
         </div> <!--footer-bottom-->
-    </div> <!--footer-->
     <!-- Footer Ends -->
 </body>
 </html>
